@@ -178,7 +178,8 @@ Shorewall 4.4.2
 
 2)  Initialization of the compiler's chain table was occurring before 
     shorewall.conf had been read and before the capabilities had been
-    determined. This could lead to incorrect rules and Perl runtime errors.
+    determined. This could lead to incorrect rules and Perl runtime
+    errors.
 
 ----------------------------------------------------------------------------
              K N O W N   P R O B L E M S   R E M A I N I N G
